| Summary: | ASTERISK-28399: channel.c: Exceptionally long queue length queuing | ||
| Reporter: | Abhay Gupta (agupta) | Labels: | |
| Date Opened: | 2019-04-29 06:43:46 | Date Closed: | 2019-05-08 12:24:46 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_local |
| Versions: | 16.3.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Ubuntu Linux with Asterisk and ari | Attachments: | |
| Description: | 1. Take a channel in Stasis
2. Add channel to bridge 3. Create another Local channel which does not exist is dial plan 4. Add this channel to bridge 5. Dial the channel We start getting messages like [Apr 21 10:42:01] NOTICE[126937] core_local.c: No such extension/context 8019990289888@2 while calling Local channel [Apr 21 10:42:03] WARNING[126941] channel.c: Exceptionally long voice queue length queuing to Local/8019990289888@2-00010c96;2 | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-04-29 06:43:47.631-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Abhay Gupta (agupta) 2019-04-29 06:47:00.435-0500 The problem seems to be in this portion of the code in core_local .c {noformat} case LOCAL_CALL_ACTION_DIALPLAN: if (!ast_exists_extension(NULL, p->context, p->exten, 1, chan_cid)) { ast_log(LOG_NOTICE, "No such extension/context %s@%s while calling Local channel\n", p->exten, p->context); } else { publish_local_bridge_message(p); /* Start switch on sub channel */ res = ast_pbx_start(chan); } break; {noformat} wherein PBX is not started in case of dialplan failure By: Friendly Automation (friendly-automation) 2019-05-08 12:24:46.899-0500 Change 11356 merged by Friendly Automation: stasis: Hangup channel for Local channel No such extension error [https://gerrit.asterisk.org/c/asterisk/+/11356|https://gerrit.asterisk.org/c/asterisk/+/11356] By: Friendly Automation (friendly-automation) 2019-05-08 12:26:23.710-0500 Change 11352 merged by Friendly Automation: stasis: Hangup channel for Local channel No such extension error [https://gerrit.asterisk.org/c/asterisk/+/11352|https://gerrit.asterisk.org/c/asterisk/+/11352] | ||